<resources>
    <string name="app_name">MyTrip</string>
    <string name="distancia">Distancia</string>
    <string name="autonomia">Autonomia</string>
    <string name="preco">Preço</string>
    <string name="calcular">Calcular</string>
    <string name="valoresValidos">Por favor informe valores validos!</string>
    <string name="total_de_quilometros">total de Quilometros</string>
    <string name="pre_o_por_litro">preço por litro</string>
    <string name="km_por_litro">KM por litro</string>
    <string name="seu_gasto_total_ser_de">seu gasto total será de:</string>
</resources>
